<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.userDispaly.userProfile.UserProfileFragment">

        <ImageButton
            android:id="@+id/userProfile_editButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:background="@null"
            android:contentDescription="@string/edit_profile"
            app:srcCompat="@drawable/edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userProfile_profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_pic"
            app:layout_constraintTop_toBottomOf="@id/userProfile_editButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/profile"
            app:cornerSize="50%"
            android:background="@drawable/round_shape" />

        <ImageButton
            android:id="@+id/userProfile_cameraButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="-16dp"
            android:layout_marginEnd="-5dp"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:background="@null"
            android:contentDescription="@string/edit_profile"
            app:srcCompat="@drawable/camera"
            app:layout_constraintTop_toBottomOf="@id/userProfile_profileImageView"
            app:layout_constraintEnd_toEndOf="@id/userProfile_profileImageView" />

        <!-- User Name (Editable) -->
        <EditText
            android:id="@+id/userProfile_fullNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="text"
            android:visibility="invisible"
            android:layout_marginTop="12dp"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:hint="@string/enter_name"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/userProfile_profileImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- User Name Display -->
        <TextView
            android:id="@+id/userProfile_fullNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/userProfile_profileImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- User Stats -->
        <LinearLayout
            android:id="@+id/userStatsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/userProfile_fullNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/userProfile_postsCount"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="5 posts"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- Image Grid RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userPhotosRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/userStatsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />

        <!-- Location CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/locationCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/userPhotosRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <fragment
                    android:id="@+id/navigation_reports_map"
                    android:name="com.harelshaigal.madamal.ui.mapDisplay.reportsMap.ReportsMapFragment"
                    android:label="@string/title_reports_map"
                    tools:layout="@layout/fragment_reports_map"
                    android:layout_height="200dp"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/register_progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationCard"
            tools:ignore="MissingConstraints" />

        <!-- Save Button -->
        <Button
            android:id="@+id/userProfile_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="שמור שינויים"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/register_progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
